# llm-finetune

./: .gitignore  README.md  hello.py  pyproject.toml
data/: prepare_data.py  train_data.json  val_data.json
evaluation/: test_models.py
models/full_finetune/: custom_training_losses.json  eval_results.json  training_metrics.json
models/full_finetune/checkpoint-100/: config.json  trainer_state.json
models/full_finetune/checkpoint-200/: trainer_state.json
models/full_finetune/checkpoint-280/: trainer_state.json
models/full_finetune/checkpoint-56/: trainer_state.json
training/: config.py  full_finetune.py  lora_finetune.py
wandb/: latest-run
